// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StackedBarChart /> CumulativeWithSelectionDimBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-7jspzw"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-13nb1p5"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1413hh7"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-xyp2u7"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p8teyv"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-e4tojs"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1b8ummy"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-i8z2x8"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-onaqla"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-pc7o78"
          />
          <span
            class="css-1sjvubj"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-ncdzc3"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1njomkv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-2duvi0-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> CumulativeWithSelectionHideBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-7jspzw"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-13nb1p5"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1413hh7"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-xyp2u7"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p8teyv"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-e4tojs"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1b8ummy"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-i8z2x8"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-onaqla"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-pc7o78"
          />
          <span
            class="css-1sjvubj"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-ncdzc3"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1njomkv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-2duvi0-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> Default story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-1vn7mby"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1gav3yd"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1492r3h"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ehb6gx"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1a6veir"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1q4rno4"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1ag94cp"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StackedBarChart /> ProportionalWithSelectionDimBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-1vn7mby"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1gav3yd"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1492r3h"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ehb6gx"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1a6veir"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1q4rno4"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1ag94cp"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1njomkv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-2duvi0-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> ProportionalWithSelectionHideBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-1vn7mby"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1gav3yd"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1492r3h"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ehb6gx"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1a6veir"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1q4rno4"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1ag94cp"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1njomkv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-2duvi0-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-ll8hvy"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> WithMouseEvents story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Mouse Events Demo
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1rms5vv"
        width="360px"
      >
        <div
          class="css-1vn7mby"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1gav3yd"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1492r3h"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ehb6gx"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1a6veir"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1q4rno4"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-1ag94cp"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-x22ruv"
            color="#615da2"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-dsuyix"
            color="#a45894"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-czzm89"
            color="#b96a6c"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1ss24ox"
            color="#a98954"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-4qfsgu"
            color="#90a45a"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-wik39d"
            color="#7ab978"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-3vx361"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1cg4952"
            color="#8ac2d2"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px; display: flex; gap: 16px; flex-grow: 1; align-items: flex-start;"
  >
    <div
      style="padding: 16px; border-radius: 8px; margin-bottom: 16px;"
    >
      <h3
        style="margin: 0px 0px 12px 0px; font-size: 14px;"
      >
        Current Hover State (Hover over a bar segment or legend item):
      </h3>
      <div>
        <div>
          <strong>
            Name:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Value:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Index:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Source:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Custom Color:
          </strong>
           
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      style="padding: 16px; border-radius: 8px; max-height: 400px; overflow: auto;"
    >
      <h3
        style="margin: 0px 0px 12px 0px; font-size: 14px;"
      >
        Event Log (last 10 events):
      </h3>
      <div
        style="font-size: 12px;"
      >
        No events yet. Hover or click on segments or legend items to see events.
      </div>
    </div>
  </div>
</div>
`;
